--- a/test/router/dynamic.redirect.spec.html
+++ b/test/router/dynamic.redirect.spec.html
@@ -21,71 +21,31 @@
   <script>
     describe('Vaadin.Router', function() {
       // eslint-disable-next-line no-invalid-this
-      this.title = this.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
+      const suite = this;
+      suite.title = suite.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
 
-      var outlet;
-      beforeEach(() => {
-        // reset the URL
+      const outlet = document.getElementById('outlet');
+      const throttler = document.getElementById('throttler');
+      let router;
+      beforeEach(async function() {
+        // eslint-disable-next-line no-invalid-this
+        const test = this;
+
+        // if necessary wait before it's OK to call history.pushState again
+        await throttler.throttle(test);
+
+        // reset the window URL
         window.history.pushState(null, null, '/');
 
-        // stamp the test fixture DOM into the page
-        outlet = fixture('outlet');
+        // create a new router instance
+        router = new Vaadin.Router(outlet);
       });
 
-      const throttler = document.querySelector('#throttler');
-      afterEach(function() {
-        const test = this; // eslint-disable-line no-invalid-this
-        return throttler.throttle(test);
+      afterEach(() => {
+        router.unsubscribe();
       });
 
-      describe('active routes', () => {
-        let router;
-        beforeEach(() => {
-          router = new Vaadin.Router(outlet);
-        });
-
-        afterEach(() => {
-          router.unsubscribe();
-        });
-
-        it('paths without parameters should have each route activated', async() => {
-          router.setRoutes([
-            {path: '/a', children: [
-              {path: '/b', children: [
-                {path: '/c', component: 'x-home-view'}
-              ]},
-              {path: '/', component: 'x-home-view'},
-            ]},
-            {path: '/d', component: 'x-home-view'}
-          ]);
-
-          await router.render('/a/b/c');
-          verifyActiveRoutes(router, ['/a', '/b', '/c']);
-
-          await router.render('/d');
-          verifyActiveRoutes(router, ['/d']);
-
-          await router.render('/a');
-          verifyActiveRoutes(router, ['/a', '/']);
-        });
-
-        it('paths with parameters should have each route activated without parameters replaced', async() => {
-          router.setRoutes([
-            {path: '/users/:user', component: 'x-user-profile'},
-            {path: '/image-:size(\\d+)px', component: 'x-image-view'},
-            {path: '/kb/:path+/:id', component: 'x-knowledge-base'},
-          ]);
-
-          await router.render('/users/1');
-          verifyActiveRoutes(router, ['/users/:user']);
-
-          await router.render('/image-15px');
-          verifyActiveRoutes(router, ['/image-:size(\\d+)px']);
-
-          await router.render('/kb/folder/nested/1');
-          verifyActiveRoutes(router, ['/kb/:path+/:id']);
-        });
-
+      describe('resolver chain and router features', () => {
         it('redirect overwrites activated routes', async() => {
           router.setRoutes([
             {path: '/a', children: [
@@ -99,31 +59,6 @@
           await router.render('/');
 
           verifyActiveRoutes(router, ['/a', '/b', '/c']);
-        });
-
-        it('action that uses context.next() does not add an extra active route', async() => {
-          router.setRoutes([
-            {path: '/', action: context => context.next()},
-            {path: '/', component: 'x-home-view'},
-          ]);
-
-          await router.render('/');
-
-          verifyActiveRoutes(router, ['/']);
-        });
-
-        it('action that uses context.next() overrides inactivate for the same route', async() => {
-          const inactivate = sinon.spy();
-          router.setRoutes([
-            {path: '/', action: context => context.next(), inactivate: inactivate},
-            {path: '/', component: 'x-home-view'},
-            {path: '/b', component: 'x-users-view'},
-          ]);
-
-          await router.render('/');
-          await router.render('/b');
-
-          expect(inactivate).to.not.have.been.called;
         });
 
         it('action that returns custom component activates route', async() => {
@@ -146,270 +81,6 @@
 
           verifyActiveRoutes(router, ['/a']);
           expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-        });
-
-        it('inactivate is called on deactivation and does not interrupt render if returns no value', async() => {
-          const inactivate = sinon.spy();
-          router.setRoutes([
-            {path: '/a', component: 'x-home-view', inactivate: inactivate},
-            {path: '/b', component: 'x-users-view'},
-          ]);
-
-          await router.render('/a');
-          expect(inactivate).to.not.have.been.called;
-
-          await router.render('/b');
-          expect(inactivate).to.have.been.called.once;
-          expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-          verifyActiveRoutes(router, ['/b']);
-        });
-
-        it('inactivate chain is called in reversed order, from last route to first', async() => {
-          const inactivations = [];
-          router.setRoutes([
-            {
-              path: '/',
-              inactivate: () => {
-                inactivations.push('L1');
-              },
-              children: [
-                {
-                  path: '',
-                  inactivate: () => {
-                    inactivations.push('L2');
-                  },
-                  children: [
-                    {
-                      path: 'a',
-                      inactivate: () => {
-                        inactivations.push('L3');
-                      },
-                      component: 'x-users-view'
-                    }
-                  ]
-                },
-              ]
-            },
-            {path: '/b', component: 'x-home-view'}
-          ]);
-
-          await router.render('/a');
-          await router.render('/b');
-
-          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-          expect(inactivations).to.deep.equal(['L3', 'L2', 'L1']);
-        });
-
-        it('inactivate promises return result are supported', async() => {
-          const inactivations = [];
-          router.setRoutes([
-            {
-              path: '/a',
-              inactivate: context => new Promise(resolve => {
-                inactivations.push('L1');
-                resolve(context.cancel());
-              }),
-              children: [
-                {
-                  path: '/b',
-                  component: 'x-users-list',
-                  inactivate: () => new Promise(resolve => {
-                    inactivations.push('L2');
-                    resolve();
-                  }),
-                },
-              ]
-            },
-            {path: '/c', component: 'x-home-view'}
-          ]);
-
-          await router.render('/a/b');
-          await router.render('/c');
-
-          expect(outlet.children[0].tagName).to.match(/x-users-list/i);
-          expect(inactivations).to.deep.equal(['L2', 'L1']);
-        });
-
-        it('inactivate is called with correct context argument', async() => {
-          const lastResolvedRoute = '/b';
-          const lastComponentToRender = 'x-users-view';
-          const inactivateFunction = sinon.spy();
-          router.setRoutes([
-            {path: '/a', component: 'x-home-view', inactivate: inactivateFunction},
-            {path: lastResolvedRoute, component: lastComponentToRender},
-          ]);
-
-          await router.render('/a');
-
-          expect(inactivateFunction).to.not.have.been.called;
-
-          await router.render(lastResolvedRoute);
-
-          expect(inactivateFunction).to.have.been.called.once;
-          expect(inactivateFunction.args[0].length).to.equal(1);
-          const contextParam = inactivateFunction.args[0][0];
-          expect(contextParam.pathname).to.equal(lastResolvedRoute);
-          expect(contextParam.route.path).to.equal(lastResolvedRoute);
-          expect(contextParam.route.component).to.equal(lastComponentToRender);
-        });
-
-        it('inactivate.this points to the route that defines action', async() => {
-          router.setRoutes([
-            {path: '/a', component: 'x-home-view', inactivate: function(context) {
-              expect(this.path).to.equal('/a');
-              expect(this.component).to.equal('x-home-view');
-              expect(this).not.to.be.equal(context.route);
-              expect(context.route.path).to.be.equal('/b');
-              expect(context.route.component).to.be.equal('x-users-view');
-            }},
-            {path: '/b', component: 'x-users-view'},
-          ]);
-
-          await router.render('/a');
-          await router.render('/b');
-
-          expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-        });
-
-        it('inactivate is not called for same routes in new resolve pass', async() => {
-          const inactivateA = sinon.spy();
-          const inactivateB = sinon.spy();
-          const inactivateC = sinon.spy();
-
-          router.setRoutes([
-            {path: '/a', inactivate: inactivateA, children: [
-              {path: '/b', inactivate: inactivateB, children: [
-                {path: '/c', inactivate: inactivateC, component: 'x-home-view'}
-              ]},
-              {path: '/', component: 'x-home-view'},
-            ]},
-          ]);
-
-          await router.render('/a/b/c');
-          await router.render('/a');
-
-          expect(inactivateA).to.not.have.been.called;
-          expect(inactivateB).to.have.been.called.once;
-          expect(inactivateC).to.have.been.called.once;
-        });
-
-        it('inactivate that returns cancel, changes render target and reverts active routes changes every time it is triggered', async() => {
-          router.setRoutes([
-            {path: '/a', children: [
-              {path: '/b', inactivate: context => context.cancel(), children: [
-                {path: '/c', component: 'x-home-view'}
-              ]},
-            ]},
-            {path: '/d', component: 'whatever'}
-          ]);
-
-          await router.render('/a/b/c');
-          await router.render('/d');
-          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-          verifyActiveRoutes(router, ['/a', '/b', '/c']);
-
-          await router.render('/d');
-          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-          verifyActiveRoutes(router, ['/a', '/b', '/c']);
-        });
-
-        it('inactivate is called when new activation path has no different routes but is shorter', async() => {
-          const inactivate = sinon.spy();
-          const actionToEmulateShorterResolvePass = context => {
-            if ((context.pathname.match(/\//g) || []).length < 2) {
-              return context.component('x-home-view');
-            }
-          };
-          router.setRoutes([
-            {path: '/a', action: actionToEmulateShorterResolvePass, children: [
-              {path: '/b', component: 'x-users-view', inactivate: inactivate},
-            ]},
-          ]);
-
-          await router.render('/a/b');
-          expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-          verifyActiveRoutes(router, ['/a', '/b']);
-          expect(inactivate).to.not.have.been.called;
-
-          await router.render('/a');
-          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-          verifyActiveRoutes(router, ['/a']);
-          expect(inactivate).to.have.been.called.once;
-        });
-
-        it('inactivate that returns cancel, changes render target and reverts active routes changes ' +
-          'when new activation path has no different routes but is shorter', async() => {
-          const actionToEmulateShorterResolvePass = context => {
-            if ((context.pathname.match(/\//g) || []).length < 2) {
-              return context.component('x-home-view');
-            }
-          };
-          router.setRoutes([
-            {path: '/a', action: actionToEmulateShorterResolvePass, children: [
-              {path: '/b', component: 'x-users-view', inactivate: context => context.cancel()},
-            ]},
-          ]);
-
-          await router.render('/a/b');
-          await router.render('/a');
-
-          expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-          verifyActiveRoutes(router, ['/a', '/b']);
-        });
-      });
-
-      describe('redirect.from and context.from values for dynamic redirects', () => {
-        let router;
-        beforeEach(() => {
-          router = new Vaadin.Router(outlet);
-        });
-
-        afterEach(() => {
-          router.unsubscribe();
-        });
-
-        const from = '/a/b/c';
-        const redirectFunction = context => {
-          const redirectObject = context.redirect('/d');
-          expect(redirectObject.redirect.from).to.be.equal(from);
-          return redirectObject;
-        };
-        const verificationAction = context => {
-          expect(context.from).to.be.equal(from);
-        };
-
-        it('action with redirect has its context.from and redirect.from populated correctly', async() => {
-          router.setRoutes([
-            {path: '/a', children: [
-              {path: '/b', children: [
-                {path: '/c', action: redirectFunction}
-              ]},
-            ]},
-            {path: '/d', component: 'x-home-view', action: verificationAction}
-          ]);
-
-          await router.render(from);
-
-          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-        });
-
-        it('action with redirect gets double slashes removed from its context.from and redirect.from', async() => {
-          let from = '';
-          router.setRoutes([
-            {path: '/', children: [
-              {path: '', children: [
-                {path: '/c', action: context => context.redirect('/d')}
-              ]},
-            ]},
-            {path: '/d', component: 'x-home-view', action: context => {
-              from = context.from;
-            }}
-          ]);
-
-          await router.render('/c');
-
-          expect(outlet.children[0].tagName).to.match(/x-home-view/i);
-          expect(from).to.be.equal('/c');
         });
       });
     });
