--- a/demo/demo-elements/x-profile-view.html
+++ b/demo/demo-elements/x-profile-view.html
@@ -2,8 +2,8 @@
 
 <dom-module id="x-profile-view">
   <template preserve-content>
-    User ID: [[route.params.id]]<br/>
-    <code>/user</code> or <code>/users</code>: [[route.params.0]]
+    User ID: [[location.params.id]]<br/>
+    <code>/user</code> or <code>/users</code>: [[location.params.0]]
   </template>
   <script>
     class XProfileView extends Polymer.Element {
@@ -13,7 +13,7 @@
 
       static get properties() {
         return {
-          route: Object
+          location: Object
         };
       }
     }
