--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -211,7 +211,7 @@
         <dom-module id="x-user-manage">
           <template>
             <h1>Manage user</h1>
-            <p>User name: [[route.params.user]]</p>
+            <p>User name: [[location.params.user]]</p>
             <a href="/user/delete">Delete user</a>
           </template>
         </dom-module>
