--- a/demo/vaadin-router-route-parameters-demos.html
+++ b/demo/vaadin-router-route-parameters-demos.html
@@ -73,8 +73,8 @@
         <dom-module id="x-project-view">
           <template>
             <h1>Project</h1>
-            <p>ID: [[route.params.id]]</p>
-            <code>/project</code> or <code>/projects</code>: [[route.params.0]]
+            <p>ID: [[location.params.id]]</p>
+            <code>/project</code> or <code>/projects</code>: [[location.params.0]]
           </template>
         </dom-module>
 
