--- a/demo/demo-elements/user.bundle.html
+++ b/demo/demo-elements/user.bundle.html
@@ -7,7 +7,7 @@
     </style>
 
     <h1>User Profile</h1>
-    <p>User id: <b>[[route.params.id]]</b>. This view was loaded using HTML bundle.</p>
+    <p>User id: <b>[[location.params.id]]</b>. This view was loaded using HTML bundle.</p>
   </template>
 </dom-module>
 
