--- a/demo/demo-elements/x-knowledge-base.html
+++ b/demo/demo-elements/x-knowledge-base.html
@@ -1,6 +1,6 @@
 <dom-module id="x-knowledge-base">
   <template preserve-content>
-    Knowledge base path: '[[route.params.path]]'
+    Knowledge base path: '[[location.params.path]]'
   </template>
   <script>
     class XKnowledgeBase extends Polymer.Element {
@@ -10,7 +10,7 @@
 
       static get properties() {
         return {
-          route: Object
+          location: Object
         };
       }
     }
