--- a/demo/demo-elements/x-user-profile.html
+++ b/demo/demo-elements/x-user-profile.html
@@ -9,7 +9,7 @@
     </style>
 
     <h1>User Profile</h1>
-    <p>Name: [[route.params.user]]</p>
+    <p>Name: [[location.params.user]]</p>
   </template>
   <script>
     (() => {
@@ -20,7 +20,7 @@
 
         static get properties() {
           return {
-            route: Object
+            location: Object
           };
         }
       }
